add draft program

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,14 +20,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!-- navigation menu -->
                     <li><a href="index.html">Home</a></li>
+                    <!--<li><a href="program.html">Program</a></li>-->
                     <li><a href="cfp.html">Call for Papers</a></li>
                     <li><a href="committee.html">Committees</a></li>
-                    <!--TODO: Add components here-->
-                    <!--<li><a href="cfp-poster-demo.html">Call for Posters and Demos</a></li>-->			
-                    <!--<li><a href="camera-ready.html">Publication Information</a></li>-->
-                    <!-- <li><a href="accepted.html#accepted">Accepted Papers</a></li> -->
-                    <!-- <li><a href="program.html#program">Program</a></li> -->
-                    <!-- <li><a href="keynote.html">Keynote</a></li> -->
                 </ul>
             </div>
         </div><!-- /.container -->
