--- a/_includes/header-small.html
+++ b/_includes/header-small.html
@@ -20,6 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <!-- navigation menu -->
                 <li><a href="index.html">Home</a></li>
+                <li><a href="program.html">Program</a></li>
                 <li><a href="cfp.html">Call for Papers</a></li>
                 <li><a href="committee.html">Committees</a></li>
                 <!--                    <li><a href="cfp-poster-demo.html">Call for Posters and Demos</a></li>-->
@@ -31,21 +32,3 @@
         </div>
     </div><!-- /.container -->
 </nav>
-
-<header id="site-header" class="site-header valign-center" height="100px">
-    <div class="intro">
-
-        <h1>{{ site.data.conference.short_title }} {{ site.data.conference.year }}</h1>
-
-        <h2>{{ site.data.conference.title }} {{ site.data.conference.year }}</h2>
-
-        <br class="mobile-break">
-        <h2>{{ site.data.conference.location }}<br>{{ site.data.conference.dates }}</h2>
-
-        <!-- <br class="mobile-break"> -->
-        <p><small>{{ site.data.conference.subtitle }}</small></p>
-
-        <br class="mobile-break" style="line-height: 5px"/>
-
-    </div>
-</header>
