--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!-- navigation menu -->
                     <li><a href="index.html">Home</a></li>
-                    <!--<li><a href="program.html">Program</a></li>-->
+                    <li><a href="program.html">Program</a></li>
                     <li><a href="cfp.html">Call for Papers</a></li>
                     <li><a href="committee.html">Committees</a></li>
                 </ul>
