--- a/_includes/header-small.html
+++ b/_includes/header-small.html
@@ -21,6 +21,7 @@
                 <!-- navigation menu -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="program.html">Program</a></li>
+                <li><a href="proceedings.html">Proceedings</a></li>
                 <li><a href="venue.html">Venue</a></li>
                 <li><a href="cfp.html">Call for Papers</a></li>
                 <li><a href="committee.html">Committees</a></li>
